# Hisab

./: .bazelrc  .clang-tidy  .cmake-format.yaml  .codespellrc  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  WORKSPACE.bazel  pyproject.toml
.claude/: settings.json  settings.local.json
.githooks/: pre-commit
.github/workflows/: ci.yml
Cmake/flags/: build_type.cmake  checks.cmake  compile_definitions.cmake  compiler_checks.cmake  flags.md  platform.cmake
Cmake/tools/: README.md  cache.cmake  clang_tidy.cmake  compression.cmake  coverage.cmake  cuda.cmake  enzyme.cmake  experimental.cmake  helper_macros.cmake  hip.cmake  incredibuild.cmake  iwyu.cmake  linker.cmake  logging.cmake  lto.cmake  mkl.cmake  numa.cmake  openmp.cmake  parallel_backend.cmake  sanitize.cmake  spell.cmake  summary.cmake  tbb.cmake  threads.cmake  utils.cmake  valgrind.cmake  xcode_toolchain.cmake
Docs/: BAZEL_FILES_SUMMARY.txt  BAZEL_USER_GUIDE.md  CORE_AND_PROFILER_MACROS.md  FINAL_SUMMARY.md  IMPLEMENTATION_CHECKLIST_COMPLETED.md  IMPLEMENTATION_COMPLETE.md  INCREDIBUILD_COMMAND_OUTPUT_LOG.md  OPTION3_COMPLETE_INDEX.md  OPTION3_FINAL_SUMMARY.md  OPTION3_IMPLEMENTATION_COMPLETE.md  OPTION3_QUICK_START.md  OpenSSF_Badge_Summary.md  OpenSSF_Badge_Update_Guide.md  PROFILER_BUILD_RESULTS.md  PROFILER_CHANGES_VISUAL.md  PROFILER_USAGE_GUIDE.md  PROJECT_FLAGS.md  profiler.md
Docs/codereview/: OPENSSF_COMPLIANCE.md
Docs/profiler/: CORE_AND_PROFILER_MACROS.md  KINETO_COMPLETE_REVIEW.md  KINETO_IMPLEMENTATION_DETAILS.md  KINETO_PROFILER_GUIDE.md  KINETO_QUICK_REFERENCE.md  KINETO_README.md  Library_Profiler.md  PROFILER_ARCHITECTURE_DIAGRAM.txt  PROFILER_CODE_EXAMPLES-1.md  PROFILER_DETAILED_ANALYSIS.md  PROFILER_EXECUTIVE_SUMMARY.txt  PROFILER_INSTRUMENTATION_REVIEW.md  PROFILER_INVESTIGATION_COMPLETE.md  PROFILER_INVESTIGATION_SUMMARY.md  PROFILER_MISSING_COMPONENTS.md  PROFILER_USAGE_GUIDE.md  PYTORCH_PROFILER_REFACTORING.md  Profiling_Examples.md  README.md  profiler.md
Docs/readme/: bazel.md  code-coverage.md  high-performance-computing.md  setup.md  third-party-dependencies.md  usage-examples.md  vectorization.md
Examples/Profiling/: CMakeLists.txt  README.md  example_profiling_basic.cpp
Experimental/pytroch_profiler/: api.h  base.cpp  base.h  collection.cpp  collection.h  containers.h  cuda.cpp  execution_trace_observer.cpp  execution_trace_observer.h  itt.cpp  itt_observer.cpp  itt_observer.h  kineto_client_interface.cpp  kineto_shim.cpp  kineto_shim.h  nvtx_observer.cpp  nvtx_observer.h  observer.cpp  observer.h  perf-inl.h  perf.cpp  perf.h  privateuse1_observer.cpp  privateuse1_observer.h  profiler_kineto.cpp  profiler_kineto.h  profiler_python.cpp  profiler_python.h  python_tracer.cpp  python_tracer.h  record_function.h  record_function_ops.cpp  record_function_ops.h  util.cpp  util.h
Experimental/pytroch_profiler/unwind/: mem_file.h  unwind.cpp
Experimental/xsigma_autograd/: FunctionsManual.cpp  FunctionsManual.h  InferenceMode.h  TraceTypeManual.cpp  VariableTypeManual.cpp  VariableTypeUtils.h  anomaly_mode.cpp  autograd.cpp  autograd_meta.cpp  autograd_not_implemented_fallback.cpp  cpp_hook.cpp  cpp_hook.h  custom_function.cpp  custom_function.h  engine.cpp  forward_grad.h  function.cpp  function.h  graph_task.h  init.cpp  input_buffer.cpp  input_buffer.h  input_metadata.cpp  input_metadata.h  jit_decomp_interface.h  profiler.h  profiler_kineto.cpp  profiler_kineto.h  profiler_legacy.cpp  profiler_legacy.h  profiler_python.cpp  profiler_python.h  python_cpp_function.cpp  python_engine.cpp  python_function.cpp  python_function.h  python_hook.cpp  python_saved_variable_hooks.cpp  python_saved_variable_hooks.h  python_torch_functions_manual.cpp  (+11 more)
Experimental/xsigma_autograd/functions/: accumulate_grad.cpp  accumulate_grad.h  basic_ops.h  comm.cpp  comm.h  init.cpp  tensor.cpp  tensor.h  utils.cpp
Experimental/xsigma_autograd/utils/: warnings.h  wrap_outputs.h
Experimental/xsigma_jit_ir/frontend/: tracer.cpp  tracer.h
Experimental/xsigma_jit_ir/ir/: alias_analysis.cpp  alias_analysis.h  attributes.cpp  graph_utils.cpp  ir.h  ir_views.h  irparser.cpp  node_hashing.cpp  scope.cpp  scope.h  subgraph_matcher.cpp  type_hashing.cpp
Experimental/xsigma_jit_ir/passes/: autocast.cpp  bailout_graph.cpp  batch_mm.cpp  canonicalize.cpp  canonicalize_graph_fuser_ops.cpp  concat_opt.cpp  constant_propagation.cpp  dead_code_elimination.cpp  decompose_ops.cpp  device_type_analysis.cpp  dtype_analysis.cpp  fixup_trace_scope_blocks.cpp  fold_conv_bn.cpp  fold_conv_bn.h  fold_linear_bn.h  freeze_module.cpp  frozen_concat_linear.cpp  liveness.h  (+22 more)
Experimental/xsigma_nativert/: Graph.cpp  Graph.h  GraphPasses.cpp  GraphSignature.cpp  GraphSignature.h  GraphUtils.cpp  TensorMeta.cpp  TensorMeta.h
Experimental/xsigma_tensorexpr/: block_codegen.h  bounds_inference.cpp  codegen.cpp  codegen.h  cpp_codegen.cpp  cpp_codegen.h  cuda_codegen.cpp  cuda_codegen.h  eval.cpp  eval.h  expr.h  external_functions.cpp  external_functions.h  graph_opt.cpp  graph_opt.h  hash_provider.cpp  intrinsic_symbols.cpp  ir.cpp  ir_cloner.cpp  ir_cloner.h  ir_mutator.cpp  ir_mutator.h  ir_printer.cpp  ir_visitor.cpp  ir_visitor.h  kernel.cpp  kernel.h  llvm_codegen.cpp  llvm_codegen.h  llvm_jit.cpp  loopnest.cpp  lowerings.cpp  mem_dependency_checker.cpp  mem_dependency_checker.h  registerizer.h  tensor.cpp  tensorexpr_init.cpp  types.cpp  types.h
Scripts/: all-clang-format.sh  all-cmake-format.sh  setup.py  setup_bazel.py  setup_git_hooks.py  valgrind_ctest.sh
Scripts/helpers/: build.py  config.py  cppcheck.py  cuda_env.py  test.py
Scripts/iwyu/: iwyu_configure_detector.py
Scripts/suppressions/: cppcheck_suppressions.txt
Tools/coverage/: README.md  clang_coverage.py  common.py  coverage.toml  gcc_coverage.py  msvc_coverage.py  run_coverage.py
bazel/: BUILD.bazel  core.bzl  cuda_configure.bzl  logging.bzl  memory.bzl  parallel.bzl  profiler.bzl  quarisma.bzl  svml_configure.bzl  vectorization.bzl  vectorization_settings.bzl
enzyme_info/: build-info.md  build.sh
(+71 files in other folders)
