# =============================================================================
# Quarisma Bazel Configuration Settings
# =============================================================================
# Config settings for conditional compilation
# Equivalent to CMake option() and set() commands
# =============================================================================

package(default_visibility = ["//visibility:public"])

# Export the helper functions
exports_files(["quarisma.bzl"])

# =============================================================================
# Library Type Configuration
# =============================================================================

config_setting(
    name = "shared_libs",
    define_values = {"quarisma_build_shared_libs": "true"},
)

# =============================================================================
# GPU Backend Configuration
# =============================================================================

config_setting(
    name = "enable_cuda",
    define_values = {"quarisma_enable_cuda": "true"},
)

config_setting(
    name = "enable_hip",
    define_values = {"quarisma_enable_hip": "true"},
)

# =============================================================================
# Parallel Computing Configuration
# =============================================================================

config_setting(
    name = "enable_openmp",
    define_values = {"quarisma_enable_openmp": "true"},
)

config_setting(
    name = "enable_tbb",
    define_values = {"quarisma_enable_tbb": "true"},
)

# =============================================================================
# Math Library Configuration
# =============================================================================

config_setting(
    name = "enable_mkl",
    define_values = {"quarisma_enable_mkl": "true"},
)

# =============================================================================
# Memory Allocator Configuration
# =============================================================================

config_setting(
    name = "enable_mimalloc",
    define_values = {"quarisma_enable_mimalloc": "true"},
)

# Opt-out when CMake-equivalent default is ON (mimalloc, magic_enum, Sobol 1111)
config_setting(
    name = "disable_mimalloc",
    define_values = {"quarisma_enable_mimalloc": "false"},
)

# =============================================================================
# Utility Library Configuration
# =============================================================================

config_setting(
    name = "enable_magic_enum",
    define_values = {"quarisma_enable_magic_enum": "true"},
)

config_setting(
    name = "disable_magic_enum",
    define_values = {"quarisma_enable_magic_enum": "false"},
)

# =============================================================================
# Profiling Configuration
# =============================================================================

config_setting(
    name = "enable_kineto",
    define_values = {"quarisma_enable_kineto": "true"},
)

config_setting(
    name = "enable_native_profiler",
    define_values = {"quarisma_profiler_type": "native"},
)

config_setting(
    name = "enable_itt",
    define_values = {"quarisma_enable_itt": "true"},
)

# =============================================================================
# Logging Backend Configuration
# =============================================================================

config_setting(
    name = "logging_glog",
    define_values = {"quarisma_logging_backend": "glog"},
)

config_setting(
    name = "logging_loguru",
    define_values = {"quarisma_logging_backend": "loguru"},
)

config_setting(
    name = "logging_native",
    define_values = {"quarisma_logging_backend": "native"},
)

# Compiler-wrapper caching (ccache/sccache/buildcache) is CMake-only: each library uses
# LOGGING_ENABLE_CACHE + LOGGING_CACHE_BACKEND (and MEMORY_*, CORE_*, PARALLEL_*, PROFILER_*).
# Bazel has no PROJECT_* cache defines; configure caching via remote execution or toolchains.

# =============================================================================
# GPU Allocation Strategy
# =============================================================================

config_setting(
    name = "gpu_alloc_sync",
    define_values = {"quarisma_gpu_alloc": "sync"},
)

config_setting(
    name = "gpu_alloc_async",
    define_values = {"quarisma_gpu_alloc": "async"},
)

config_setting(
    name = "gpu_alloc_pool_async",
    define_values = {"quarisma_gpu_alloc": "pool_async"},
)

# =============================================================================
# Algorithm Configuration
# =============================================================================

config_setting(
    name = "lu_pivoting",
    define_values = {"quarisma_lu_pivoting": "true"},
)

config_setting(
    name = "sobol_1111",
    define_values = {"quarisma_sobol_1111": "true"},
)

config_setting(
    name = "disable_sobol_1111",
    define_values = {"quarisma_sobol_1111": "false"},
)

# =============================================================================
# Enzyme AD (matches CMake CORE_ENABLE_ENZYME / QUARISMA_HAS_ENZYME)
# =============================================================================

config_setting(
    name = "enable_enzyme",
    define_values = {"quarisma_enable_enzyme": "true"},
)

# =============================================================================
# Compression Configuration (CORE_HAS_COMPRESSION / CORE_COMPRESSION_TYPE_SNAPPY)
# =============================================================================

config_setting(
    name = "enable_compression",
    define_values = {"quarisma_enable_compression": "true"},
)

# Matches CMake: CORE_ENABLE_COMPRESSION=ON + CORE_COMPRESSION_TYPE=SNAPPY
config_setting(
    name = "compression_snappy",
    define_values = {
        "quarisma_enable_compression": "true",
        "quarisma_compression_type": "snappy",
    },
)

# Alias used by core.bzl (enable_compression_snappy mirrors compression_snappy)
config_setting(
    name = "enable_compression_snappy",
    define_values = {
        "quarisma_enable_compression": "true",
        "quarisma_compression_type": "snappy",
    },
)

# =============================================================================
# NUMA Configuration (MEMORY_HAS_NUMA — Unix only)
# =============================================================================

config_setting(
    name = "enable_numa",
    define_values = {"quarisma_enable_numa": "true"},
)

# =============================================================================
# Optional Project Feature Configuration
# =============================================================================

config_setting(
    name = "enable_svml",
    define_values = {"quarisma_enable_svml": "true"},
)

config_setting(
    name = "enable_rocm",
    define_values = {"quarisma_enable_rocm": "true"},
)

config_setting(
    name = "enable_experimental",
    define_values = {"quarisma_enable_experimental": "true"},
)

config_setting(
    name = "enable_allocation_stats",
    define_values = {"quarisma_enable_allocation_stats": "true"},
)

# =============================================================================
# Testing Configuration
# =============================================================================

config_setting(
    name = "enable_gtest",
    define_values = {"quarisma_enable_gtest": "true"},
)

config_setting(
    name = "enable_benchmark",
    define_values = {"quarisma_enable_benchmark": "true"},
)
